openshift/route.yaml
apiVersion: v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: vue-3
      app.kubernetes.io/component: vue-3
      app.kubernetes.io/instance: vue-3
    name: vue-3
    namespace: jlangy2-dev
  spec:
    host: vue-3-jlangy2-dev.apps.sandbox.x8i5.p1.openshiftapps.com
    port:
      targetPort: 80-tcp
    to:
      kind: Service
      name: vue-3
      weight: 100
    wildcardPolicy: None
kind: List
